summative.moria.Moria.scala.error
Erreur de compilation :
Moria:29: error: ';' expected but '(' found.
  dropBaggle();
            ^